--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -62,10 +62,34 @@ body{
     color:#000000;
 }
 
-.navbar .navbar-form .checkbox {
+/*.navbar .navbar-form .checkbox {
 	color: #FFF;
 }
 
 a[href="#table"] {
 	margin-top: 100px;
+}*/
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
+.affix {
+    top:100px;
+}
+
+.carousel {
+    background:#1A237E;
+}
+.carousel .item {
+  height: 300px;
+}
+.item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
 }
